# VlmRobotPlanner

./: README.md
src_nano/: README.md
src_nano/depth_voxel_downsampler/: CMakeLists.txt  package.xml
src_nano/depth_voxel_downsampler/launch/: downsample_realsense.launch.py
src_nano/depth_voxel_downsampler/src/: voxel_downsampler_node.cpp
src_nano/map_maker/: package.xml  setup.py
src_nano/map_maker/install/: setup.bash
src_nano/map_maker/install/map_maker/lib/map_maker/: map_maker
src_nano/map_maker/install/map_maker/share/map_maker/: package.dsv  package.ps1  package.sh  package.zsh
src_nano/map_maker/log/: latest_build
src_nano/map_maker/map_maker/: map_maker.py
src_nano/pwm_control/: ddd.py  package.xml  setup.py
src_nano/pwm_control/launch/: cmdvel.launch.py  pwm_pub.launch.py
src_nano/pwm_control/pwm_control/: cmdvel.py  pwm_pub.py
src_nano/yolo/: find_similar_words.py  lvis_embeddings.npy  package.xml  pt_to_engine.py  setup.cfg  setup.py
src_nano/yolo/data/: detected_objects.json
src_nano/yolo/yolo/: download_all-MiniLM-L6-v2.py  image2yolo.py  lvis_names.npy  map2pgm.py  marker(주석있던 원본).py  marker.py  marker_json_pub.py  similar_word.py
src_nx/map_maker/: setup.cfg
src_nx/map_maker/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
src_nx/map_maker/install/map_maker/share/map_maker/: map_maker.launch.py  package.bash
src_nx/map_maker/map_maker/: map_maker.py
src_nx/vlm/: .py  package.xml  setup.py
src_nx/vlm/prompts/: actor_prompt.txt  critic_prompt.txt
src_nx/vlm/vlm/: test.py  vlm_node.py
src_nx/vlm/vlm/prompts/: actor_prompt.txt  critic_prompt.txt  critic_prompt_test.txt
src_nx/vlm_node/: setup.py
src_nx/vlm_node/install/: local_setup.sh  setup.sh
src_nx/vlm_node/install/vlm_node/share/vlm_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src_nx/vlm_node/log/: latest_build
src_nx/vlm_node/resource/: vlm_node
src_nx/vlm_node/vlm_node/: scenario_1.json  vlm_node.py
