<?xml version="1.0"?>
<package format="3">
  <name>map_maker</name>
  <version>0.0.1</version>
  <description>2D map maker node</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Runtime deps (add more as needed) -->
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

