<?xml version="1.0"?>
<package format="3">
  <name>yolo</name>
  <version>0.0.0</version>
  <description>YOLO RealSense ROS2 node</description>

  <maintainer email="nano2@todo.todo">ofm_nano1</maintainer>
  <license>Oh</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ultralytics</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>