<?xml version="1.0"?>
<package format="3">
  <name>vlm_node</name>
  <version>0.1.0</version>
  <description>VLM node packaged for ROS 2 Humble (Python)</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <!-- Add more exec_depends if your node needs them, e.g. std_msgs, sensor_msgs, cv_bridge, etc. -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

